--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="error_required_field">Required field.</string>
     <string name="error_invalid_names">Please use only letters (a-z) and space.</string>
     <string name="error_invalid_started_date">Invalid started date. Please, confirm the typed information</string>
+    <string name="error_invalid_date_greater_than">The date cannot be greater than a year</string>
+    <string name="error_invalid_date_greater_than_today">The date cannot be greater than today\'s date</string>
     <string name="error_not_class_found">No class not found, please add a new class.</string>
 
     <!--  menu bottom  -->
@@ -58,6 +60,7 @@
     <string name="setting_new_class">New Class</string>
     <string name="setting_class_saved_message">New class saved!</string>
     <string name="setting_student_saved_message">New student saved!</string>
+    <string name="settings_version">Version:</string>
 
     <!--  classes  -->
     <string name="classe_updated_message">Class Updated!</string>
